--- a/assets/style.css
+++ b/assets/style.css
@@ -61,13 +61,13 @@
 .wpmo-wrap table tr td:first-child,
 .wpmo-wrap table tr th:first-child {
     vertical-align: top;
-    text-align: right;
+    text-align: left;
     width: 200px;
 }
 
 .wpmo-wrap table tr.black-list-column {
     opacity: 0.7;
-    border-right: 2px solid rgb(161, 8, 249);
+    border-left: 2px solid rgb(161, 8, 249);
 }
 
 .wpmo-wrap table .column-name {
@@ -124,7 +124,7 @@
 }
 
 .wpmo-wrap .change-icons span:not(:last-child) {
-    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .wpmo-wrap .dashicons-trash {
@@ -141,6 +141,10 @@
 
 .wpmo-wrap .dashicons-insert {
     color: rgb(249, 112, 8);
+}
+
+.wpmo-wrap .color-red{
+    color: rgb(254, 58, 58);
 }
 
 .success-blink {
@@ -163,6 +167,7 @@
     -webkit-box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
     -moz-box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
     border-radius: 2px;
+    max-width: 250px;
 }
 
 @keyframes successBlinking {
