--- a/assets/style.css
+++ b/assets/style.css
@@ -1,189 +1,161 @@
 .wpmo-wrap {
-    line-height: 2em;
+  line-height: 2em;
+  /* Tabs */
 }
-
-.wrap.wpmo-wrap .wp-heading-inline {
-    margin-bottom: 30px;
-    display: flex;
+.wpmo-wrap .wp-heading-inline {
+  margin-bottom: 30px;
+  display: flex !important;
+  align-items: center;
 }
-
 .wpmo-wrap .wp-heading-inline span {
-    line-height: 1;
+  line-height: 1;
+  font-size: 2em;
+  width: 45px;
+  height: 45px;
+  margin-right: 10px;
+  background-color: black;
+  /* Create the gradient. */
+  background-image: linear-gradient(65deg, #0aaee1, #7d0d74);
+  /* Set the background size and repeat properties. */
+  background-size: 100%;
+  background-repeat: repeat;
+  /* Use the text as a mask for the background. */
+  /* This will show the gradient as a text color rather than element bg. */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
 }
-
 .wpmo-wrap table {
-    border-collapse: collapse;
-    width: 100%;
+  border-collapse: collapse;
+  width: 100%;
 }
-
-.wpmo-wrap a,
-.wpmo-wrap span {
-    display: inline-block;
-}
-
-.wpmo-wrap strong {
-    font-weight: 700;
-}
-
-.wpmo-wrap select {
-    min-width: 300px;
-}
-
-.wpmo-wrap textarea {
-    max-width: 100%;
-}
-
-.wpmo-wrap select[multiple] {
-    min-width: 300px;
-    max-height: 200px;
-}
-
-.wpmo-wrap .table {
-    width: 100%;
-    margin-bottom: 1rem;
-    color: #212529;
-}
-
-.wpmo-wrap .table-striped tbody tr:nth-of-type(2n + 1) {
-    background-color: rgba(0, 0, 0, 0.05);
-}
-
-.wpmo-wrap .table-th-bold tbody tr th,
-.wpmo-wrap .table-striped tbody tr th {
-    background-color: #dee2e6;
-}
-
 .wpmo-wrap table td,
 .wpmo-wrap table th {
-    padding: 15px 10px;
+  padding: 15px 10px;
 }
-
-.wpmo-wrap table tr td:first-child,
-.wpmo-wrap table tr th:first-child {
-    vertical-align: top;
-    text-align: left;
-    width: 200px;
+.wpmo-wrap table td:first-child,
+.wpmo-wrap table th:first-child {
+  vertical-align: top;
+  text-align: left;
+  width: 200px;
 }
-
 .wpmo-wrap table tr.black-list-column {
-    opacity: 0.7;
-    border-left: 2px solid rgb(161, 8, 249);
+  opacity: 0.7;
+  border-left: 2px solid rgb(161, 8, 249);
 }
-
 .wpmo-wrap table .column-name {
-    direction: ltr;
-    text-align: left;
-    display: inline-block;
+  direction: ltr;
+  text-align: left;
+  display: inline-block;
 }
-
+.wpmo-wrap a,
+.wpmo-wrap span {
+  display: inline-block;
+}
+.wpmo-wrap strong {
+  font-weight: 700;
+}
+.wpmo-wrap select {
+  min-width: 300px;
+}
+.wpmo-wrap select[multiple] {
+  min-width: 300px;
+  max-height: 200px;
+}
+.wpmo-wrap textarea {
+  max-width: 100%;
+}
 .wpmo-wrap input.small-text {
-    width: 100px;
+  width: 100px;
 }
-
-/* Tabs */
 .wpmo-wrap .nav-tab-wrapper {
-    border-bottom: none;
+  border-bottom: none;
 }
-
-.wpmo-wrap .nav-tab {
-    border: 1px solid #e0e0e0;
-    border-bottom: none;
-    color: #787878;
+.wpmo-wrap .nav-tab-wrapper .nav-tab {
+  border: 1px solid #e0e0e0;
+  border-bottom: none;
+  color: #787878;
+  border-radius: 5px 5px 0 0;
 }
-
-.wpmo-wrap .nav-tab:not(.nav-tab-active) {
-    background-color: #f1f1f1;
-    cursor: pointer;
+.wpmo-wrap .nav-tab-wrapper .nav-tab:not(.nav-tab-active) {
+  background-color: #f1f1f1;
+  cursor: pointer;
 }
-
-.wpmo-wrap .description {
-    color: #8a8a8a;
+.wpmo-wrap .nav-tab-wrapper .nav-tab:focus {
+  box-shadow: none;
 }
-
-.wpmo-wrap .nav-tab-active,
-.wpmo-wrap .nav-tab-active:focus,
-.wpmo-wrap .nav-tab-active:focus:active,
-.wpmo-wrap .nav-tab-active:hover {
-    background-color: #fff;
-    border-bottom-color: #fff;
-    cursor: default;
+.wpmo-wrap .nav-tab-wrapper .nav-tab-active, .wpmo-wrap .nav-tab-wrapper .nav-tab-active:focus, .wpmo-wrap .nav-tab-wrapper .nav-tab-active:focus:active, .wpmo-wrap .nav-tab-wrapper .nav-tab-active:hover {
+  background-color: #fff;
+  border-bottom-color: #fff;
+  cursor: default;
 }
-
-.wpmo-wrap .nav-tab:focus {
-    box-shadow: none;
-}
-
 .wpmo-wrap .wpmo-tab-content {
-    padding: 20px;
-    background-color: #fff;
-    margin-bottom: 20px;
+  padding: 20px;
+  background-color: #fff;
+  margin-bottom: 20px;
 }
-
+.wpmo-wrap .description {
+  color: #8a8a8a;
+}
 .wpmo-wrap .change-icons span {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 .wpmo-wrap .change-icons span:not(:last-child) {
-    margin-right: 15px;
+  margin-right: 15px;
 }
-
 .wpmo-wrap .dashicons-trash {
-    color: rgb(254, 58, 58);
+  color: rgb(254, 58, 58);
 }
-
 .wpmo-wrap .dashicons-edit {
-    color: rgb(28, 127, 31);
+  color: rgb(28, 127, 31);
 }
-
 .wpmo-wrap .dashicons-remove {
-    color: rgb(161, 8, 249);
+  color: rgb(161, 8, 249);
 }
-
 .wpmo-wrap .dashicons-insert {
-    color: rgb(249, 112, 8);
+  color: rgb(249, 112, 8);
+}
+.wpmo-wrap .color-red {
+  color: rgb(254, 58, 58);
+}
+.wpmo-wrap .success-blink {
+  animation: successBlinking 250ms infinite;
+}
+.wpmo-wrap .error-blink {
+  animation: errorBlinking 250ms infinite;
 }
 
-.wpmo-wrap .color-red{
-    color: rgb(254, 58, 58);
-}
-
-.success-blink {
-    animation: successBlinking 250ms infinite;
-}
-
-.error-blink {
-    animation: errorBlinking 250ms infinite;
-}
-
-.tooltip-bar {
-    display: none;
-    position: absolute;
-    padding: 10px;
-    color: rgb(47, 47, 47);
-    background: rgb(246, 247, 247);
-    background: linear-gradient(0deg, rgba(246, 247, 247, 1) 0%, rgba(253, 255, 229, 1) 100%);
-    /* border: 1px solid #777; */
-    box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
-    -webkit-box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
-    -moz-box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
-    border-radius: 2px;
-    max-width: 250px;
+.wpmo-tooltip {
+  display: none;
+  position: absolute;
+  padding: 10px;
+  color: rgb(47, 47, 47);
+  background: rgb(246, 247, 247);
+  background: linear-gradient(0deg, rgb(246, 247, 247) 0%, rgb(253, 255, 229) 100%);
+  /* border: 1px solid #777; */
+  box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
+  -webkit-box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
+  -moz-box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
+  border-radius: 2px;
+  max-width: 250px;
 }
 
 @keyframes successBlinking {
-    0% {
-        background-color: initial;
-    }
-    100% {
-        background-color: #d6ffe6;
-    }
+  0% {
+    background-color: initial;
+  }
+  100% {
+    background-color: #d6ffe6;
+  }
+}
+@keyframes errorBlinking {
+  0% {
+    background-color: initial;
+  }
+  100% {
+    background-color: #fbdfdf;
+  }
 }
 
-@keyframes errorBlinking {
-    0% {
-        background-color: initial;
-    }
-    100% {
-        background-color: #fbdfdf;
-    }
-}
+/*# sourceMappingURL=style.css.map */
