--- a/assets/style.css
+++ b/assets/style.css
@@ -30,6 +30,17 @@
   border-collapse: collapse;
   width: 100%;
 }
+.wpmo-wrap table.table-sticky-head {
+  position: relative;
+}
+.wpmo-wrap table.table-sticky-head thead {
+  position: sticky;
+  top: 30px;
+  z-index: 1;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 1px 0px 0px #e2e2e2;
+  box-shadow: 0px 1px 0px 0px #e2e2e2;
+}
 .wpmo-wrap table td,
 .wpmo-wrap table th {
   padding: 15px 10px;
@@ -148,6 +159,7 @@
   -moz-box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
   border-radius: 2px;
   max-width: 250px;
+  z-index: 99;
 }
 
 @keyframes successBlinking {
