--- a/assets/style.scss
+++ b/assets/style.scss
@@ -35,6 +35,19 @@
         border-collapse: collapse;
         width: 100%;
 
+        &.table-sticky-head {
+            position: relative;
+
+            thead {
+                position: sticky;
+                top: 30px;
+                z-index: 1;
+                background-color: #fff;
+                -webkit-box-shadow: 0px 1px 0px 0px #e2e2e2;
+                box-shadow: 0px 1px 0px 0px #e2e2e2;
+            }
+        }
+
         td,
         th {
             padding: 15px 10px;
@@ -189,6 +202,7 @@
     -moz-box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
     border-radius: 2px;
     max-width: 250px;
+    z-index: 99;
 }
 
 @keyframes successBlinking {
