--- a/assets/style.scss
+++ b/assets/style.scss
@@ -75,6 +75,10 @@
             text-align: left;
             display: inline-block;
         }
+
+        .translated-column-name {
+            font-weight: bold;
+        }
     }
 
     a,
