Fix bug in save array values

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -220,6 +220,7 @@
     }
 
     .description .description-notice {
+      padding: 5px 8px 5px 5px;
       border-right: 3px solid rgb(254, 185, 58);
       border-left: none;
     }
