--- a/assets/style.css
+++ b/assets/style.css
@@ -38,8 +38,8 @@
   top: 32px;
   z-index: 1;
   background-color: #fff;
-  -webkit-box-shadow: 0px 1px 0px 0px #e2e2e2;
-  box-shadow: 0px 1px 0px 0px #e2e2e2;
+  -webkit-box-shadow: 0 1px 0 0 #e2e2e2;
+  box-shadow: 0 1px 0 0 #e2e2e2;
 }
 .wpmo-wrap table td,
 .wpmo-wrap table th {
@@ -165,6 +165,7 @@ body.rtl .wpmo-wrap .change-icons span:not(:last-child) {
   margin-right: 0;
 }
 body.rtl .wpmo-wrap .description .description-notice {
+  padding: 5px 8px 5px 5px;
   border-right: 3px solid rgb(254, 185, 58);
   border-left: none;
 }
@@ -177,9 +178,9 @@ body.rtl .wpmo-wrap .description .description-notice {
   background: rgb(246, 247, 247);
   background: linear-gradient(0deg, rgb(246, 247, 247) 0%, rgb(253, 255, 229) 100%);
   /* border: 1px solid #777; */
-  box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
-  -webkit-box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
-  -moz-box-shadow: 2px 2px 0px 0px rgba(184, 184, 184, 0.75);
+  box-shadow: 2px 2px 0 0 rgba(184, 184, 184, 0.75);
+  -webkit-box-shadow: 2px 2px 0 0 rgba(184, 184, 184, 0.75);
+  -moz-box-shadow: 2px 2px 0 0 rgba(184, 184, 184, 0.75);
   border-radius: 2px;
   max-width: 250px;
   z-index: 999999;
