--- a/assets/style.css
+++ b/assets/style.css
@@ -142,6 +142,20 @@
 .wpmo-wrap .color-red {
   color: rgb(254, 58, 58);
 }
+.wpmo-wrap .change-table-index {
+  color: #969696;
+  text-shadow: -1px 0 #707070, 0 1px #707070, 1px 0 #707070, 0 -1px #707070;
+  transform: rotate(45deg);
+  width: 25px;
+  height: 25px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+.wpmo-wrap .change-table-index.active {
+  color: #f3d767;
+  text-shadow: -1px 0 #e1a860, 0 1px #e1a860, 1px 0 #e1a860, 0 -1px #e1a860;
+}
 .wpmo-wrap .success-blink {
   animation: successBlinking 250ms infinite;
 }
@@ -173,7 +187,7 @@ body.rtl .wpmo-wrap .description .description-notice {
 .wpmo-tooltip {
   display: none;
   position: absolute;
-  padding: 10px;
+  padding: 5px 15px;
   color: rgb(47, 47, 47);
   background: rgb(246, 247, 247);
   background: linear-gradient(0deg, rgb(246, 247, 247) 0%, rgb(253, 255, 229) 100%);
@@ -181,7 +195,7 @@ body.rtl .wpmo-wrap .description .description-notice {
   box-shadow: 2px 2px 0 0 rgba(184, 184, 184, 0.75);
   -webkit-box-shadow: 2px 2px 0 0 rgba(184, 184, 184, 0.75);
   -moz-box-shadow: 2px 2px 0 0 rgba(184, 184, 184, 0.75);
-  border-radius: 2px;
+  border-radius: 5px;
   max-width: 250px;
   z-index: 999999;
 }
