--- a/assets/style.css
+++ b/assets/style.css
@@ -142,6 +142,12 @@
 .wpmo-wrap .color-red {
   color: rgb(254, 58, 58);
 }
+.wpmo-wrap .blue-alert {
+  background-color: #f3fdff;
+  padding: 15px;
+  border-radius: 5px;
+  margin-top: 10px;
+}
 .wpmo-wrap .change-table-index {
   color: #969696;
   text-shadow: -1px 0 #707070, 0 1px #707070, 1px 0 #707070, 0 -1px #707070;
