--- a/assets/style.scss
+++ b/assets/style.scss
@@ -184,6 +184,13 @@
     color: rgb(254, 58, 58);
   }
 
+  .blue-alert {
+    background-color: #f3fdff;
+    padding: 15px;
+    border-radius: 5px;
+    margin-top: 10px;
+  }
+
   .change-table-index {
     color: #969696;
     text-shadow: -1px 0 #707070, 0 1px #707070, 1px 0 #707070, 0 -1px #707070;
