--- a/assets/style.css
+++ b/assets/style.css
@@ -23,8 +23,7 @@
   /* This will show the gradient as a text color rather than element bg. */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
+  -moz-background-clip: border;
 }
 .wpmo-wrap table {
   border-collapse: collapse;
@@ -113,7 +112,7 @@
   margin-bottom: 20px;
 }
 .wpmo-wrap .description {
-  color: #8a8a8a;
+  color: #6a6a6a;
 }
 .wpmo-wrap .description .description-notice {
   padding: 5px 5px 5px 8px;
@@ -146,6 +145,8 @@
   background-color: #f3fdff;
   padding: 15px;
   border-radius: 5px;
+  display: inline-block;
+  margin-bottom: 20px;
   margin-top: 10px;
 }
 .wpmo-wrap .change-table-index {
