--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,11 @@
   line-height: 2em;
   /* Tabs */
 }
+.wpmo-wrap *, .wpmo-wrap *:before, .wpmo-wrap *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 .wpmo-wrap .wp-heading-inline {
   margin-bottom: 30px;
   display: flex !important;
@@ -112,7 +117,7 @@
   margin-bottom: 20px;
 }
 .wpmo-wrap .description {
-  color: #6a6a6a;
+  color: #6c5646;
 }
 .wpmo-wrap .description .description-notice {
   padding: 5px 5px 5px 8px;
@@ -187,6 +192,18 @@
   background-color: #9a0f0f;
   border: 1px solid #5d0505;
 }
+.wpmo-wrap .badge {
+  padding: 5px 7px;
+  border-radius: 10px;
+  border: 1px solid #f5f5f5;
+  background-color: #fff;
+  line-height: 1;
+}
+.wpmo-wrap .badge.green-badge {
+  background-color: #2dc420;
+  border-color: #209b15;
+  color: #fff;
+}
 body.rtl .wpmo-wrap .wp-heading-inline span {
   margin-left: 10px;
   margin-right: 0;
@@ -207,6 +224,122 @@ body.rtl .wpmo-wrap .description .description-notice {
   padding: 5px 8px 5px 5px;
   border-right: 3px solid rgb(254, 185, 58);
   border-left: none;
+}
+body.rtl .wpmo-wrap .wpmo-checkbox label {
+  padding: 10px 58px 10px 20px;
+}
+body.rtl .wpmo-wrap .wpmo-checkbox label:before {
+  right: 12px;
+  left: inherit;
+}
+body.rtl .wpmo-wrap .wpmo-checkbox input:checked + label:after {
+  right: 22px;
+  left: inherit;
+}
+
+.wpmo-checkbox input {
+  padding: 0;
+  height: initial;
+  width: initial;
+  margin-bottom: 0;
+  display: none;
+  cursor: pointer;
+}
+.wpmo-checkbox label {
+  padding: 10px 20px 10px 58px;
+  display: inline-block;
+  background-color: #f3fdff;
+  border-radius: 5px;
+  border: 2px solid #f3fdff;
+  user-select: none;
+  position: relative;
+}
+.wpmo-checkbox label .label {
+  display: block;
+}
+.wpmo-checkbox label:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: calc(50% - 13px);
+  left: 12px;
+  width: 26px;
+  height: 26px;
+  border: 2px solid #2271b1;
+  border-radius: 50%;
+}
+.wpmo-checkbox label .badge {
+  margin-top: 10px;
+  opacity: 0.7;
+}
+.wpmo-checkbox label .item-count {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2271b1;
+  color: #fff;
+  padding: 10px;
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  margin-top: 10px;
+}
+.wpmo-checkbox label .item-count:empty {
+  display: none;
+}
+.wpmo-checkbox label .item-count:empty + span {
+  display: none;
+}
+.wpmo-checkbox input:checked + label {
+  border-color: #c2e3ea;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+}
+.wpmo-checkbox input:checked + label:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: calc(50% - 9px);
+  left: 22px;
+  width: 6px;
+  height: 14px;
+  border: solid #2271b1;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+.wpmo-checkbox input:disabled + label {
+  background-color: #fafafa;
+  border-color: #f5f5f5;
+  color: #737373;
+  pointer-events: none;
+  cursor: default;
+}
+.wpmo-checkbox input:disabled + label:before {
+  border-color: #b0b0b0;
+}
+.wpmo-checkbox input:disabled + label .item-count {
+  background-color: #b0b0b0;
+}
+.wpmo-checkbox input:disabled:checked + label {
+  border-color: #b0b0b0 !important;
+}
+.wpmo-checkbox input:disabled:checked + label:after {
+  border-color: #b0b0b0 !important;
+}
+.wpmo-checkbox.wpmo-checkbox-red label {
+  background-color: #ffebeb;
+  border-color: #fff7f3;
+}
+.wpmo-checkbox.wpmo-checkbox-red label:before {
+  border-color: #d63638;
+}
+.wpmo-checkbox.wpmo-checkbox-red label .item-count {
+  background-color: #d63638;
+}
+.wpmo-checkbox.wpmo-checkbox-red input:checked + label {
+  border-color: #ead0c2;
+}
+.wpmo-checkbox.wpmo-checkbox-red input:checked + label:after {
+  border-color: #d63638;
 }
 
 .wpmo-tooltip {
