--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,6 +1,12 @@
 .wpmo-wrap {
   line-height: 2em;
 
+  *, *:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+
   .wp-heading-inline {
     margin-bottom: 30px;
     display: flex !important;
@@ -145,7 +151,7 @@
   }
 
   .description {
-    color: #6a6a6a;
+    color: #6c5646;
 
     .description-notice {
       padding: 5px 5px 5px 8px;
@@ -239,6 +245,20 @@
     }
   }
 
+  .badge {
+    padding: 5px 7px;
+    border-radius: 10px;
+    border: 1px solid #f5f5f5;
+    background-color: #fff;
+    line-height: 1;
+
+    &.green-badge {
+      background-color: #2dc420;
+      border-color: #209b15;
+      color: #fff;
+    }
+  }
+
   body.rtl & {
     .wp-heading-inline {
       span {
@@ -270,6 +290,154 @@
       padding: 5px 8px 5px 5px;
       border-right: 3px solid rgb(254, 185, 58);
       border-left: none;
+    }
+
+    .wpmo-checkbox {
+      label {
+        padding: 10px 58px 10px 20px;
+
+        &:before {
+          right: 12px;
+          left: inherit;
+        }
+      }
+
+      input:checked + label {
+        &:after {
+          right: 22px;
+          left: inherit;
+        }
+      }
+    }
+  }
+}
+
+.wpmo-checkbox {
+  input {
+    padding: 0;
+    height: initial;
+    width: initial;
+    margin-bottom: 0;
+    display: none;
+    cursor: pointer;
+  }
+
+  label {
+    padding: 10px 20px 10px 58px;
+    display: inline-block;
+    background-color: #f3fdff;
+    border-radius: 5px;
+    border: 2px solid #f3fdff;
+    user-select: none;
+    position: relative;
+
+    .label {
+      display: block;
+    }
+
+    &:before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: calc(50% - 13px);
+      left: 12px;
+      width: 26px;
+      height: 26px;
+      border: 2px solid #2271b1;
+      border-radius: 50%;
+    }
+
+    .badge {
+      margin-top: 10px;
+      opacity: 0.7;
+    }
+
+    .item-count {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #2271b1;
+      color: #fff;
+      padding: 10px;
+      border-radius: 50%;
+      width: 12px;
+      height: 12px;
+      margin-top: 10px;
+
+      &:empty {
+        display: none;
+
+        + span {
+          display: none;
+        }
+      }
+    }
+  }
+
+  input:checked + label {
+    border-color: #c2e3ea;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: calc(50% - 9px);
+      left: 22px;
+      width: 6px;
+      height: 14px;
+      border: solid #2271b1;
+      border-width: 0 2px 2px 0;
+      transform: rotate(45deg);
+    }
+  }
+
+  input:disabled {
+    + label {
+      background-color: #fafafa;
+      border-color: #f5f5f5;
+      color: #737373;
+      pointer-events: none;
+      cursor: default;
+
+      &:before {
+        border-color: #b0b0b0;
+      }
+
+      .item-count {
+        background-color: #b0b0b0;
+      }
+    }
+
+    &:checked + label {
+      border-color: #b0b0b0 !important;
+
+      &:after {
+        border-color: #b0b0b0 !important;
+      }
+    }
+  }
+
+  &.wpmo-checkbox-red {
+    label {
+      background-color: #ffebeb;
+      border-color: #fff7f3;
+
+      &:before {
+        border-color: #d63638;
+      }
+
+      .item-count {
+        background-color: #d63638;
+      }
+    }
+
+    input:checked + label {
+      border-color: #ead0c2;
+
+      &:after {
+        border-color: #d63638;
+      }
     }
   }
 }
