Add ability to delete expired transient options, And optimize DB tables

--- a/assets/style.css
+++ b/assets/style.css
@@ -247,7 +247,7 @@ body.rtl .wpmo-wrap .wpmo-checkbox input:checked + label:after {
 }
 .wpmo-checkbox label {
   padding: 10px 20px 10px 58px;
-  display: inline-block;
+  display: block;
   background-color: #f3fdff;
   border-radius: 5px;
   border: 2px solid #f3fdff;
@@ -280,8 +280,8 @@ body.rtl .wpmo-wrap .wpmo-checkbox input:checked + label:after {
   color: #fff;
   padding: 10px;
   border-radius: 50%;
-  width: 12px;
-  height: 12px;
+  width: 30px;
+  height: 30px;
   margin-top: 10px;
 }
 .wpmo-checkbox label .item-count:empty {
